[tool.poetry]
name = "mestrado"
version = "0.1.0"
description = ""
authors = ["Tarsis Azevedo <tarsis.azevedo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
